<resources>
    <string name="app_name">Login App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \n Build your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="firstName">FirstName</string>
    <string name="lastName">LastName</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="todo">TODO</string>
</resources>